--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
+      rel="stylesheet">
     <title>The Power of Simplicity</title>
 </head>
 
@@ -18,7 +20,11 @@
             <a href="#" class="header__logo">
                 <img src="./img/apple.svg" alt="Apple">    
             </a>  
-            <nav class="header_nav">
+            <label for="menu">
+                <span class="material-icons">menu</span>
+            </label>
+            <input id="menu" type="checkbox">
+            <nav class="header__nav">
                 <ul>
                     <li><a href="#">Features</a></li>
                     <li><a href="#">Partners</a></li>
@@ -32,13 +38,13 @@
         <main class="main">
             <h1 class="main__title">The Power of Simplicity</h1>
             <p class="mail__description">Instead of spending time searching for the right app, our AI will bring the right app to you.</p>
-            <a href="#" class="main___btn">Learn</a>
+            <a href="#" class="main__btn">Learn</a>
             <div class="main__icons">
-                <img src="./img/circle 1.svg" alt="Circle">
-                <img src="./img/circle 1.svg" alt="Circle">
-                <img src="./img/circle 2.svg" alt="Circle">
-                <img src="./img/circle 1.svg" alt="Circle">
-                <img src="./img/circle 1.svg" alt="Circle">
+                <img src="./img/circle 1.svg" alt="Circle1">
+                <img src="./img/circle 1.svg" alt="Circle1">
+                <img src="./img/circle 2.svg" alt="Circle2">
+                <img src="./img/circle 1.svg" alt="Circle1">
+                <img src="./img/circle 1.svg" alt="Circle1">
             </div>
         </main>
     </div>
